--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
 
 		#xivelyContent {
 			background: #fff;
-			box-shadow: inset 0px 0px 100px #f0f0f0;
+			box-shadow: inset 0px 0px 100px #f564f5;
 		}
 
 			.graphWrapper {
 				-moz-box-shadow:inset 0px 0px 50px 25px #ffffff;
 				-webkit-box-shadow:inset 0px 0px 50px 25px #ffffff;
 				box-shadow:inset 0px 0px 50px 25px #ffffff;
-				background-image: linear-gradient(bottom, rgb(255,255,255) 30%, rgb(245,245,245) 97%);
-				background-image: -o-linear-gradient(bottom, rgb(255,255,255) 30%, rgb(245,245,245) 97%);
-				background-image: -moz-linear-gradient(bottom, rgb(255,255,255) 30%, rgb(245,245,245) 97%);
-				background-image: -webkit-linear-gradient(bottom, rgb(255,255,255) 30%, rgb(245,245,245) 97%);
-				background-image: -ms-linear-gradient(bottom, rgb(255,255,255) 30%, rgb(245,245,245) 97%);
+				background-image: linear-gradient(bottom, rgb(255,255,255) 30%, rgb(245,245,100) 97%);
+				background-image: -o-linear-gradient(bottom, rgb(255,255,255) 30%, rgb(245,245,100) 97%);
+				background-image: -moz-linear-gradient(bottom, rgb(255,255,255) 30%, rgb(245,245,100) 97%);
+				background-image: -webkit-linear-gradient(bottom, rgb(255,255,255) 30%, rgb(245,245,100) 97%);
+				background-image: -ms-linear-gradient(bottom, rgb(255,255,255) 30%, rgb(245,245,100) 97%);
 				background-image: -webkit-gradient(
 					linear,
 					left bottom,
 					left top,
-					color-stop(0.3, rgb(255,255,255)),
-					color-stop(0.97, rgb(245,245,245))
+					color-stop(0.3, rgb(255,255,100)),
+					color-stop(0.97, rgb(245,245,100))
 				);
 			}
 	</style>
@@ -348,7 +348,7 @@
 	</div>
 
 	<!-- Footer -->
-	<div style="background: #0D1B23;">
+	<!--<div style="background: #0D1B23;">
 		<div style="padding: 15px;">
 			<div class="row">
 				<div class="large-8 columns" style="color: rgb(81, 98, 111); padding-top: 10px; padding-bottom: 10px;">
